src/model/snapshots/redline__model__sections__tests__snapshot_default_status_tree.snap
---
source: src/model/sections.rs
expression: rows_text(&tree)
---
[
    "Branch | ## main | sel=false",
    "Group | Staged changes | sel=false",
    "File |   M src/a.rs (+1 -1) | sel=true",
    "File |   M src/c.rs (+1 -0) | sel=false",
    "File |   R src/renamed.rs (was src/old.rs) (+1 -1) | sel=false",
    "Group | Unstaged changes | sel=false",
    "File |   M src/b.rs (+1 -1) | sel=false",
    "File |   M src/c.rs (+1 -1) | sel=false",
    "Group | Untracked files | sel=false",
    "File |   ? new.txt | sel=false",
]
